# packed_ptr

./: .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: config.rs  error.rs  lib.rs  packable.rs  ptr.rs  reference.rs  typed_ptr.rs
src/targets/: armv8.rs  fallback.rs  mod.rs  x86_64.rs
