[package]
name = "packed_ptr"
version = "0.1.0"
edition = "2021"

[features]
default = ["std"]

std = ["libc", "libc/std"]

libc = ["dep:libc"]

[dependencies]
cfg-if = "1.0.0"
sptr = "0.3.2"

[target.'cfg(target_arch = "x86_64")'.dependencies]
spin = { version = "0.9.8", default-features = false, features = ["once"] }

[target.'cfg(all(target_arch = "x86_64", unix))'.dependencies]
libc = { version = "0.2.150", default-features = false, optional = true }
