[package]
name = "packed_ptr"
version = "0.1.0"
edition = "2021"

[features]
default = []

[dependencies]
cfg-if = "1.0.0"
sptr = "0.3.2"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "riscv64gc-unknown-linux-gnu",
]
