[package]
name = "packed_ptr"
description = "A configurable & generic tagged pointer implementation in Rust"
authors = ["Anshul Gupta <ansg191@anshulg.com>"]
version = "0.1.0"
repository = "https://github.com/ansg191/packed_ptr"
documentation = "https://docs.rs/packed_ptr"
license = "MIT"
edition = "2018"
rust-version = "1.51.0"
readme = "README.md"
keywords = ["tag", "pointer"]
categories = ["data-structures", "no-std", "no-std::no-alloc"]

[features]
default = []

[dependencies]
sptr = "0.3.2"

[package.metadata.docs.rs]
targets = [
    "x86_64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "i686-unknown-linux-gnu",
    "i686-pc-windows-msvc",
    "aarch64-unknown-linux-gnu",
    "aarch64-apple-darwin",
    "riscv64gc-unknown-linux-gnu",
]
